test/files/neg/bug112706A.check
bug112706A.scala:4: warning: for (val x <- ... ) has been deprecated; use for (x <- ... ) instead
    for (val t <- p) t._1 match {
         ^
bug112706A.scala:5: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: java.lang.String
    case Tuple2(node,_) =>   
         ^
one warning found
one error found
